# growbe-mainboard

./: .dockerignore  .gitignore  .vimspector.json  Cargo.toml  README.md  build.rs  debug_test.sh  mainboard_config.json  mainboard_config_dev.json  mainboard_config_local.json  virtual-comboard.json
.cargo/: config.toml
.github/: notify-version.sh
.github/workflows/: master.yml  pr.yaml  tag.yml
crates/growbe-shared/: Cargo.toml
crates/growbe-shared/src/: cmd.rs  config.rs  id.rs  lib.rs  logger.rs  tracing.rs  version.rs
crates/pc-module/: Cargo.toml  build.rs  config.json  growbe-pc-module@.service
crates/pc-module/src/: channel.rs  config.rs  id.rs  logger.rs  main.rs  ws.rs
crates/pc-module/src/modules/: mod.rs
crates/pc-module/src/modules/ccs/: mod.rs
crates/pc-module/src/modules/css/: mod.rs
crates/pc-module/src/protos/: mod.rs  module.rs  sync.rs
docker/: arm.env  baseRust.Dockerfile  coverage.env  source.list  x86.env
docker/scripts/: coverage.sh
docs/: README.md  pi.md
drivers/: Makefile  main.c  mainboard_driver
drivers/include/: i2c_comboard.h  mainboard_driver.h
drivers/src/: i2c.c  i2c_comboard.c
scripts/: debug_test.sh  docker.sh  docker_push.sh  growbe-mainboard.service  install.sh  remote_debug.sh  rust_env.sh  webcam_stream.sh
src/: cmd.rs  id.rs  logger.rs  main.rs
src/comboard/: config.rs  mod.rs
src/comboard/imple/: channel.rs  i2c_linux.rs  interface.rs  mod.rs  virt.rs
src/comboard/imple/ble/: bluer.rs  btleplug.rs  mod.rs
src/comboard/imple/i2c_linux/: channel.rs  mod.rs
src/comboard/imple/virt/: mod.rs
src/comboard/imple/ws/: mod.rs  tungstenite.rs
src/mainboardstate/: config.rs  error.rs  hello_world.rs  localconnection.rs  mod.rs  rtc.rs  update.rs
src/modulestate/: aaa.rs  aab.rs  aap.rs  aas.rs  ccs.rs  cmd.rs  css.rs  handle_state.rs  handle_value.rs  interface.rs  mod.rs  pac.rs  pal.rs  pcs.rs  ppo.rs  ppr.rs  relay.rs  state_manager.rs  store.rs  task.rs
src/modulestate/aas/: calibration.rs  mod.rs
src/modulestate/actor/: mod.rs
src/modulestate/alarm/: mod.rs  model.rs  store.rs  validator.rs
src/modulestate/controller/: context.rs  controller_trait.rs  mod.rs  module_command.rs  store.rs
src/modulestate/controller/imple/: mod.rs  static_controller.rs
src/modulestate/modules/: aaa.rs  aab.rs  aap.rs  ccs.rs  css.rs  mod.rs  pac.rs  pal.rs  pcs.rs  ppo.rs  ppr.rs
src/modulestate/modules/aas/: calibration.rs  mod.rs
src/modulestate/relay/: alarm.rs  configure.rs  cycle.rs  duration.rs  mod.rs  physical_relay.rs  virtual_relay.rs
src/modulestate/relay/virtual_relay/: handler.rs  mod.rs  op.rs  store.rs  virtual_relay.rs
src/plateform/: external.rs  external_config_file.rs  mod.rs  net.rs  process.rs  restart.rs  sysinfo.rs  uname.rs  wifi.rs
src/protos/: alarm.rs  board.rs  env_controller.rs  message.rs  mod.rs  module.rs  virt.rs
src/server/: config.rs  http.rs  mod.rs
src/socket/: http.rs  mod.rs  mqtt.rs  reverse_proxy_cmd.rs  ss.rs
src/store/: database.rs
src/utils/: cast.rs  future.rs  json.rs  mod.rs  mqtt.rs  tests.rs  time.rs  validation.rs
