[package]
name = "growbe-mainboard"
version = "0.2.0"
edition = "2021"

[features]
default = ["com_virt", "com_ws", "debug"]
gpio = ["rppal"]
com_ble = ["bluer", "btleplug", "futures", "uuid", "tokio-stream"]
com_virt = []
com_ws = ["tokio-tungstenite", "url", "futures-util"]
com_i2c = ["gpio", "cty"]
http_server = ["warp"]

debug = ["growbe_shared/debug", "tokio/tracing"]

pi = ["com_i2c"]
pc = ["com_ws"]

[workspace]
members = [ "crates/*" ]


[dependencies]
growbe_shared = { path = "./crates/growbe-shared"}

chrono = "*"
rumqttc = "*"
env_logger = "*"
log = "*"
protobuf = "*"
lazy_static = "*"
rusqlite = { version = "*", features = ["bundled"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["full", "time", "rt-multi-thread"] }
tokio-util = "*"
regex = "*"

reqwest = { version = "*", features = ["json"] }

nix = { version = "*", optional = false }

cty = { version = "*", optional = true }

futures = { version = "*", optional = true }

# dependencies for web server
warp = { version = "*" , optional = true}

# dependencies for web socket
tokio-tungstenite = { version = "*",  optional = true }
url = { version = "*", optional = true }
futures-util = { version = "*", optional = true }

# dependencies for ble
uuid = { version = "*", optional = true }
tokio-stream = { version = "*", features = ["sync"], optional = true }

tracing = { version = "*", optional = true }
tracing-subscriber = { version = "*", optional = true }
tracing-journald = { version = "*", optional = true }
console-subscriber = { version = "0.1.5", optional = true }

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
btleplug = { version = "*", features = ["serde"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
uname = { git = "https://github.com/icorderi/rust-uname" , optional = false }

[target.'cfg(target_os = "linux")'.dependencies]
uname = { git = "https://github.com/icorderi/rust-uname" , optional = false }
bluer = {version = "*", features = ["bluetoothd"], optional = true}
# for gpio
rppal = { version = "*", optional = true }

[dev-dependencies]
serial_test = "*"

[build-dependencies]
protoc-rust = "*"
