[package]
name = "growbe_shared"
version = "0.2.0"
edition = "2021"


[features]
debug = ["tracing", "tracing-subscriber", "tracing-journald", "console-subscriber"]

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"

serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"

tracing = { version = "*", optional = true }
tracing-subscriber = { version = "*", optional = true }
tracing-journald = { version = "*", optional = true }
console-subscriber = { version = "0.1.5", optional = true }
