[package]
name = "growbe-pc-module"
version = "0.1.11"
edition = "2021"

[features]

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
protobuf = "2.25.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
tokio = { version = "1.14", features = ["full", "time", "rt-multi-thread"] }
lazy_static = "1.4.0"

tokio-tungstenite = { version = "*" }
futures-util = { version = "*" }

[build-dependencies]
protoc-rust = "2.25.2"
